--- a/src/scss/includes/panels/poi.scss
+++ b/src/scss/includes/panels/poi.scss
@@ -139,7 +139,7 @@
 }
 
 .poi_panel__info__beer {
-  margin-left: 20px;
+  margin-left: 44px;
   color: #90750b;
   font-size: 14px;
 }
